# diplom_1.2

./: .env  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: build_and_push.yaml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/commands/: bot_commands.py  runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_verification_code.py
bot/tg/: client.py  schemas.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  models.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_creae_new_objects.py  0004_alter_goalcategory_board.py  0005_alter_boardparticipant_options.py
goals/views/: boards.py  goal_category_views.py  goal_comment_view.py  goal_views.py
tests/: factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
tests/comments/: test_comments_view.py
tests/core/: test_core_view.py
tests/goals/: test_goal_create_view.py  test_goal_view.py
todolist/: fields.py  settings.py  urls.py
