[tool.poetry]
name = "diplom-1-2"
version = "0.1.0"
description = ""
authors = ["ArtemShadrin <artemshadrinprogramming@gmail.com >"]
readme = "README.md"
packages = [{include = "diplom_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
