[tool.poetry]
name = "diplom-1-2"
version = "0.1.0"
description = ""
authors = ["ArtemShadrin <artemshadrinprogramming@gmail.com >"]
readme = "README.md"
packages = [{include = "diplom_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"
django-filter = "^23.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
